--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,7 @@
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
-    "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.0"
+    "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.0",
     "web-component-tester": "*",    
   }
 }
