--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,6 @@
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.0",
-    "web-component-tester": "*",    
+    "web-component-tester": "*"
   }
 }
