--- a/bower.json
+++ b/bower.json
@@ -7,12 +7,12 @@
   "description": "Dashboard layout system.",
   "keywords": [
     "web-components",
-    "paperkit",    
+    "paperkit",
     "dashboard"
   ],
   "main": [
-  	"paperkit-dashboard.html",
-  	"paperkit-dashboard-item.html"
+    "paperkit-dashboard.html",
+    "paperkit-dashboard-item.html"
   ],
   "license": "http://paperkit.github.io/LICENSE.txt",
   "homepage": "https://github.com/PaperKit/paperkit-dashboard/",
@@ -23,7 +23,8 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#^1.0.0",
-    "paperkit-dragcontainer": "PaperKit/paperkit-dragcontainer#master"
+    "paperkit-dragcontainer": "PaperKit/paperkit-dragcontainer#master",
+    "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#^1.0.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
