--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "polymer": "Polymer/polymer#^1.0.0",
     "paperkit-dragcontainer": "PaperKit/paperkit-dragcontainer#master",
-    "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#^1.0.0"
+    "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#^1.0.0",
+    "paperkit-grid-behavior": "PaperKit/paperkit-grid-behavior"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
